# bible_app

./: .dockerignore  .gitignore  README.md  codecov.yml  docker-compose.local.yml  docker-compose.yml  pretest.sh  pyproject.toml
backend/: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  dev.sh  docker-compose.yml  prestart.sh  pretest.sh  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 014873d8d134_add_thema.py  0f76756e7424_add_rank_all_to_verse.py  626c29e6f97f_add_references_field_to_verse.py  8db0bbec1d36_add_code_field_to_chapter_and_verse.py  8e5be10bd17c_add_comment_field_to_bible.py  a45a7617e718_add_bible_tables.py  be85660b31e8_book_model_update_category_field_.py  deb03ada95f9_add_bible_tables.py
backend/app/: Makefile  README.md  alembic.ini  main.py  prestart.sh  pretest.sh  pyproject.toml  reverse.sh  run.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 532bbae842dd_add_bible_tables.py  e18d656d73d5_schema_create.py  f783a5f522ed_book_add_code.py
backend/app/api/: main.py
backend/app/api/routers/: bible.py  bible_routes.py  utils.py
backend/app/app/: main.py
backend/app/app/api/: deps.py  main.py
backend/app/app/api/routers/: bible_routes.py
backend/app/app/core/: config.py
backend/app/app/crud/: base.py  crud_bible.py
backend/app/app/db/: base_class.py  db_check.py  export_version.py  session.py
backend/app/app/db/start/: __init__.py  common.py  import_version.py  init_db.py  init_langs.py  init_mg.py  reverse_version.py  rules.py
backend/app/app/db/start/mg/: init_diem.py  init_mg1886.py  reverse_mg1886.py
backend/app/app/models/: bible.py
backend/app/app/schemas/: bible.py
backend/app/app/utils/bicaso/: parse_to_json.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  base.py  crud_bible.py
backend/app/data/bible/: baiboly.txt
backend/app/db/: base.py  base_class.py  export_version.py  init_bible.py  session.py
backend/app/db/start/: constants.py  content_check.py  import_version.py  init_db.py  init_langs.py  rules.py
backend/app/models/: bible.py
backend/app/schemas/: bible.py
backend/app/templates/: reference_version.html  references.html  verse.html  verse_mixed_version.html  verse_version.html
backend/app/tests/: __init__.py  conftest.py  init_db.py
backend/app/tests/api/: test_bible_routes.py
backend/tests/: __init__.py  conftest.py  init_db.py
backend/tests/api/: test_bible_routes.py
(+25 files in other folders)
