[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Johny Blaze <blazeorjohny6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "~0.11"
fastapi = "~0.115"
SQLAlchemy = "~2.0"
pydantic-settings = "^2.5.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.3"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
