[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Johny Blaze <blazeorjohny6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
uvicorn = "^0.30.6"
fastapi = "^0.115.0"
SQLAlchemy = "~2.0"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.3"
tenacity = "^9.0.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
bump-pydantic = "^0.8.0"
gunicorn = "^23.0.0"
pydash = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
autoflake = "^2.3.1"
coverage = "^7.6.2"
pytest-cov = "^5.0.0"


[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"